@@ -20,7 +20,7 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH TCPDUMP 1  "7 September 2024"
+.TH TCPDUMP 1  "24 November 2024"
 .SH NAME
 tcpdump \- dump traffic on a network
 .SH SYNOPSIS
@@ -348,13 +348,14 @@ Dump packet-matching code as decimal numbers (preceded with a count).
 .TP
 .B \-\-list\-interfaces
 .PD
-Print the list of the network interfaces available on the system and on
-which
+Print the list of libpcap devices (regular and pseudo network interfaces,
+802.11/Bluetooth/USB monitors, DAG/D-Bus/DPDK/netfilter/netmap/RDMA/SNF
+devices etc.) available on the host on which
 .I tcpdump
-can capture packets.  For each network interface, a number and an
-interface name, possibly followed by a text description of the
-interface, are printed.  The interface name or the number can be supplied
-to the
+is running.  For each device print a name, a text description (if available)
+and a set of flags.  Also print a number unless libpcap indicates that the
+device does not support packet capture.  The interface name or the number
+can be supplied to the
 .B \-i
 flag to specify an interface on which to capture.
 .IP
